# stock-teacher

./: .gitignore  Cargo.toml  Readme.org  package.json  readme.md
client/: package.json  pnpm-lock.yaml  vite.config.ts
server/: Cargo.toml
server/src/: main.rs  paths.rs
server/src/db/queries/: games.rs
server/src/models/: record.rs
src/: auth.rs  db.rs  errors.rs  models.rs
src/db/: queries.rs  schema.rs
src/db/queries/: players.rs
src/models/: game.rs  player.rs
