[package]
name = "stock_teacher"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["alloc", "std"] }
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
fastnum = "0.7.4"
handlebars = "6.3.2"
persistent-scheduler = "0.5.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
warp = { version = "0.4.2", features = ["server"] }
